--- a/task-list-management/src/app/components/register/register.component.css
+++ b/task-list-management/src/app/components/register/register.component.css
@@ -5,3 +5,19 @@
 h3{
     text-align: center;
 }
+
+.input-container {
+    position: relative;
+  }
+  
+  .clear-button {
+    position: absolute;
+    right: 8px;
+    top: 50%;
+    transform: translateY(-50%);
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    color: #999;
+  }
+  
