--- a/task-list-management/src/app/components/task-list/task-list.component.html
+++ b/task-list-management/src/app/components/task-list/task-list.component.html
@@ -1,1 +1,22 @@
-<p>task-list Page</p>
+<h3>List of tasks</h3>
+<div class="button-div">
+<button class="button-first" [routerLink]="['/add-task']" ><b>Add task</b></button>
+</div>
+
+<div class="task-list-border">
+    <img src="/assets/images/exclamation.png" class="">
+    <p>First task</p>
+    <button class="button-type"><img src="/assets/images/archive.png" class=""></button>
+    <button class="button-type"><img src="/assets/images/edit.png" class=""></button>
+    <button class="button-type"><img src="/assets/images/trash.png" class=""></button>
+    <button class="button-type" ><img src="/assets/images/right.png" class=""></button>
+
+</div>
+
+<!-- <div class="task-list-border">
+    <img src="/assets/images/exclamation.png" class="">
+    <p>second task</p>
+    <button class="button-type"><img src="/assets/images/archive.png" class=""></button>
+    <button class="button-type"><img src="/assets/images/edit.png" class=""></button>
+    <button class="button-type"><img src="/assets/images/trash.png" class=""></button>
+</div> -->
