--- a/task-list-management/src/app/shared/navbar/navbar.component.html
+++ b/task-list-management/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" [routerLink]="['/']">Task list manager</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,6 +7,15 @@
       <div class="d-flex">
       <div class="collapse navbar-collapse" id="navbarScroll">
         <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+          <li class="nav-item" *ngIf="authService.isLoggedIn()">
+            <a class="nav-link active" aria-current="page" [routerLink]="['/task-list']">Tasks</a>
+          </li>
+          <li class="nav-item" *ngIf="authService.isLoggedIn()">
+            <a class="nav-link active" aria-current="page" href="#">Add task</a>
+          </li>
+          <li class="nav-item" *ngIf="authService.isLoggedIn()">
+            <a class="nav-link active" aria-current="page" href="#">Archive</a>
+          </li>
           <li class="nav-item"  *ngIf="!authService.isLoggedIn()">
             <a class="nav-link" [routerLink]="['/login']">Login</a>
           </li>
@@ -14,10 +23,46 @@
             <a class="nav-link" [routerLink]="['/register']">Register</a>
           </li>
           <li class="nav-item">
-            <button *ngIf="authService.isLoggedIn()" class="nav-link" (click)="signOut()">Wyloguj</button>
+            <button *ngIf="authService.isLoggedIn()" class="nav-link" (click)="signOut()">Sign Out</button>
           </li>
         </ul>
       </div>
     </div>
   </div>
+  </nav> -->
+
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" [routerLink]="['/']" >Task List Manager</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarScroll">
+        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+          <li class="nav-item" *ngIf="authService.isLoggedIn()">
+            <a class="nav-link active" aria-current="page" [routerLink]="['/task-list']">Tasks</a>
+          </li>
+          <li class="nav-item" *ngIf="authService.isLoggedIn()">
+            <a class="nav-link active" aria-current="page" [routerLink]="['/add-task']">Add task</a>
+          </li>
+          <li class="nav-item" *ngIf="authService.isLoggedIn()">
+            <a class="nav-link active" aria-current="page" [routerLink]="['/archive']">Archive</a>
+          </li>         
+        </ul>
+        <div class="d-flex">
+          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+            <li class="nav-item"  *ngIf="!authService.isLoggedIn()">
+              <a class="nav-link" [routerLink]="['/login']">Login</a>
+            </li>
+            <li class="nav-item" *ngIf="!authService.isLoggedIn()">
+              <a class="nav-link" [routerLink]="['/register']">Register</a>
+            </li>
+            <li class="nav-item">
+              <button *ngIf="authService.isLoggedIn()" class="nav-link" (click)="signOut()">Sign Out</button>
+            </li>
+            </ul>
+
+        </div>
+      </div>
+    </div>
   </nav>
