--- a/task-list-management/src/app/components/task-list/task-list.component.html
+++ b/task-list-management/src/app/components/task-list/task-list.component.html
@@ -11,6 +11,6 @@
   <p>Due date: {{ item.date_end | slice:0:10}}</p>
   <button class="button-type"><img src="/assets/images/archive.png" class=""></button>
   <button class="button-type"><img src="/assets/images/edit.png" class="" ></button>
-  <button class="button-type" (click)="deleteTask(item.id)"><img src="/assets/images/trash.png" class=""></button>
+  <button class="button-type" (click)="deleteTask(item.id)" onclick="window.location.reload();"><img src="/assets/images/trash.png" class=""></button>
   <button class="button-type" [routerLink]="['/one-task', item.id]"><img src="/assets/images/right.png" class="" ></button>
 </div>
