--- a/task-list-management/src/app/components/edit-task/edit-task.component.html
+++ b/task-list-management/src/app/components/edit-task/edit-task.component.html
@@ -43,7 +43,7 @@
 
   <div>
     <h5>Due Date:</h5>
-    <input type="date" name="date_end" id="date" class="input-date" pattern="yyyy-mm-dd" [(ngModel)]="task.date_end">
+    <input type="datetime-utc" name="date_end" id="date" class="input-date" pattern="yyyy-mm-dd" [(ngModel)]="task.date_end">
   </div>
 
   <div class="button-div">
