--- a/task-list-management/src/app/components/home/home.component.html
+++ b/task-list-management/src/app/components/home/home.component.html
@@ -1,3 +1,18 @@
-<div class="container">
+<!-- <div class="container">
     <h2 class="header">Task List Manager</h2>
-</div>
+</div> -->
+<div class="page-container">
+    <div class="container">
+      <h2 class="header">Task List Manager</h2><br>
+      <p class="description">
+        Take advantage of the task management application. 
+        <br>To use all the capabilities of the app:
+        <a class="link" routerLink="/register">Register</a> or
+        <a class="link" routerLink="/login">Login</a> if you already have an account.
+      </p>
+    </div>
+    <footer class="footer">
+      <p>&copy; 2023 Task List Manager. All rights reserved.</p>
+    </footer>
+  </div>
+  
